[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/GhodBase.RunInstance/OptionsDialog.gd" type="Script" id=1]

[node name="OptionsDialog" type="ConfirmationDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -139.0
margin_right = 191.0
margin_bottom = 65.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="lblPath" type="Label" parent="VBoxContainer"]
margin_right = 392.0
margin_bottom = 14.0
text = "Path:"

[node name="Container" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 392.0
margin_bottom = 42.0

[node name="txtPath" type="LineEdit" parent="VBoxContainer/Container"]
margin_right = 300.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
align = 3

[node name="btnChangePath" type="Button" parent="VBoxContainer/Container"]
margin_left = 304.0
margin_right = 390.0
margin_bottom = 24.0
grow_horizontal = 0
text = "ChangePath"
align = 2

[node name="chkDebugCollision" type="CheckBox" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 392.0
margin_bottom = 70.0
text = "Debug collision"

[node name="chkDebugNavigation" type="CheckBox" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 392.0
margin_bottom = 98.0
text = "Debug navigation"

[node name="chkCommandLineDebug" type="CheckBox" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 392.0
margin_bottom = 126.0
text = "Debug command line"

[node name="chkOnTop" type="CheckBox" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 392.0
margin_bottom = 154.0
text = "Always on top"

[connection signal="confirmed" from="." to="." method="_on_OptionsDialog_confirmed"]
[connection signal="pressed" from="VBoxContainer/Container/btnChangePath" to="." method="_on_btnChangePath_pressed"]
